# motion-effect

./: .gitignore  CMakeLists.txt  README.md
data/motion-filter/: en-US.ini  zh-TW.ini
data/motion-transition/: en-US.ini  zh-TW.ini
locale/: en-US.ini  zh-TW.ini
src/: helper.c  helper.h  motion-filter.c  motion-filter.cpp  motion-transition.c
src/motion-filter/: CMakeLists.txt  motion-filter.c
src/motion-transition/: CMakeLists.txt  motion-transition.c
